#update_CORS_settings